# uxlaunch

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.orig  chooser.c  configure  configure.ac  consolekit.c  dbus.c  desktop.c  efs.c  lib.c  misc.c  oom_adj.c  options.c  pam.c  user.c  uxlaunch-ipc.h  uxlaunch.1  uxlaunch.c  uxlaunch.h  uxlaunch.service.in  uxlaunch.sysconfig  xserver.c
src/: Makefile.am  chooser.c  consolekit.c  dbus.c  desktop.c  efs.c  lib.c  misc.c  oom_adj.c  options.c  pam.c  user.c  uxlaunch-ipc.h  uxlaunch.c  uxlaunch.h  xserver.c
